--- a/style.css
+++ b/style.css
@@ -32,6 +32,22 @@ body {
     color: var(--white-color);
     line-height: 1.6;
 }
+
+.slider {
+    position: relative;
+    overflow: hidden;
+    height: 100vh; 
+}
+
+.slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 0.4s ease-in-out;
+}
 /*<!-- End Section 3 (Macbook Air) --> */
 
 /* <!-- Section 4 (Apple watch) -->
