--- a/style.css
+++ b/style.css
@@ -45,8 +45,88 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0;
+    /* opacity: 0; */
     transition: 0.4s ease-in-out;
+}
+
+.slide .current {
+    opacity: 1;
+}
+
+
+.slide:first-child {
+    background-image: url('/images/1.jpg');
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.slide:nth-child(2) {
+    background-image: url('/images/2.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.slide:nth-child(3) {
+    background-image: url('/images/1.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.slide .content {
+    position: absolute;
+    bottom: 70px;
+    left: -600px;
+    opacity: 1;
+    width: 600px;
+    background-color: var(--primary-color);
+    color: var(--white-color);
+    padding: 35px;
+}
+
+.slide .content h1 {
+    margin-bottom: 10px;
+}
+
+.slide .current .content {
+    opacity: 1;
+    transform: translateX(600px);
+    transition: all 0.7s ease-in-out 0.3s;
+}
+
+.buttons button#next {
+    position: absolute;
+    top: 50%;
+    right: 15px;
+
+}
+
+.buttons button#prev {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+}
+
+.buttons button {
+    border: 2px solid white;
+    background-color: transparent;
+    color: var(--white-color);
+    cursor: pointer;
+    padding: 13px 15px;
+    border-radius: 15px;
+    outline: none;
+
+}
+
+.buttons button:hover {
+    background-color: var(--white-color);
+    color: #333;
 }
 /*<!-- End Section 3 (Macbook Air) --> */
 
