--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html{
 }
 
 .slide:nth-child(3) {
-    background-image: url('/images/1.jpg');
+    background-image: url('/images/3.jpg');
     -webkit-background-size: contain;
     -moz-background-size: contain;
     -o-background-size: contain;
@@ -90,6 +90,7 @@ html{
     width: 600px;
     background-color: var(--primary-color);
     color: var(--white-color);
+    border-radius: 12px;
     font-size: 20px;
     padding: 35px;
 }
