creating content of modal window

--- a/style.css
+++ b/style.css
@@ -105,20 +105,20 @@ html{
     transition: all 0.7s ease-in-out 0.5s;
 }
 
-.buttons button#next {
+.btns button#next {
     position: absolute;
     top: 50%;
     right: 15px;
 
 }
 
-.buttons button#prev {
+.btns button#prev {
     position: absolute;
     top: 50%;
     left: 15px;
 }
 
-.buttons button {
+.btns button {
     border: 2px solid white;
     background-color: transparent;
     color: var(--white-color);
@@ -129,7 +129,7 @@ html{
 
 }
 
-.buttons button:hover {
+.btns button:hover {
     background-color: var(--white-color);
     color: #333;
     -webkit-transform: scale(1.5,1.5);
@@ -147,13 +147,12 @@ html{
     }
 }
 
-#buy, #adToCard{
+.btn, #adToCard {
     display: inline-block;
     width: 160px;
     border: 5px outset rgb(189, 127, 127);
     background-color: transparent;
     color: var(--white-color);
-    cursor: pointer;
     padding: 13px 15px;
     border-radius: 15px;
     outline: none;
@@ -175,20 +174,115 @@ html{
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
   }
 
   .modal-content {
-    background-color: #fefefe;
-    color: sandybrown;
+    background-color: #bdd4e7;
+background-image: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%);
+
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     font-size: 25px;
     border: 1px solid #888;
+    border-radius: 15px;
     width: 80%; /* Could be more or less, depending on screen size */
   }
 
 
+  /*--- section product ---*/
+.product-mac {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  cursor: pointer;
+}
+.product-mac h2 {
+  font-size: 95px;
+  font-weight: 300;
+  margin-bottom: 20px;
+}
+.container {
+  width: 1070px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 15px;
+}
+.grid-product {
+  background: #f1f1f1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: .5s;
+  border-radius: 15px;
+}
+.grid-product:hover {
+  background: #e1e1e1;
+}
+.grid-product img {
+  width: 300px;
+  border-radius: 15px;
+}
+.grid-detail {
+  margin: 20px 0;
+  text-align: center;
+}
+.grid-detail p:last-child {
+  transition: .5s;
+  margin-top: 10px;
+}
+.grid-product:hover > .grid-detail p:last-child {
+  color: #3498db;
+}
+
+/*-------*/
+.grid-full {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+.grid-product-full {
+  background: #f1f1f1;
+  grid-column: span 3;
+  display: flex;
+  position: relative;
+}
+
+/* apple logo animation */
+
+.logo {
+    position: relative;
+    color: #fff;
+    font-size: 195px;
+    text-shadow: 0 0 50px #0f0,
+                 0 0 100px #0f0,
+                 0 0 150px #0f0,
+                 0 0 200px #0f0,
+                 0 0 250px #0f0;
+
+    animation: animate 5s linear infinite;
+}
+
+@keyframes animate {
+    0%
+    {
+        filter: hue-rotate(0deg);
+    }
+
+    100%
+    {
+        filter: hue-rotate(0deg);
+    }
+}
 /* Slide Animations */
 
 
