--- a/style.css
+++ b/style.css
@@ -280,13 +280,13 @@ background-image: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%);
   font-weight: 300;
   margin-bottom: 20px;
 }
-.container {
+.maccontainer {
   width: 1070px;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
-.grid {
+.maingrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 15px;
