--- a/style.css
+++ b/style.css
@@ -427,7 +427,7 @@ section{
     justify-content: space-between;
     padding:1.5rem 7%;
     border-bottom: var(--border);
-    position: fixed;
+    position:relative;
     top:0; left: 0; right: 0;
     z-index: 1000;
 }
