--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ a{
     }
 }
 
-.btn, #adToCard {
+#buy, #close, #adToCard {
     display: inline-block;
     width: 160px;
     border: 5px outset rgb(189, 127, 127);
