--- a/style.css
+++ b/style.css
@@ -930,5 +930,131 @@ margin-left: 0px 0px 0px 30px;
 
 /* <!-- End Section 5 (Airpods) -->  */
 
-/* <!-- Section 6 (Contact Us) -->
-<!-- End Section 6 (Contact Us) --> */
+/* <!-- Section 6 (Contact Us) -->*/
+.img{
+    width: 50px;
+    padding: 15px;
+  }
+  
+  .container{
+    height: 150px;
+    margin-top: 10%;
+  }
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+  }
+  
+  Modal Content/Box
+  .modal-content {
+    /* background-color: #0a0a0a; */
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Quicksand', sans-serif;
+      text-align: center;
+      }
+  li{
+      list-style: none;
+  }
+  a{
+      color: inherit;
+      text-decoration: none;
+  }
+  .main-container {
+             
+      color: white;
+      display: none;
+      position: fixed;
+      overflow: auto;
+      z-index: 1000;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.2);
+      left: 0;
+      top: 0;
+     
+  }
+  .box1{
+      border: 1px solid white; 
+      max-width: 600px;
+      display: flex;
+      justify-content: space-between;
+  }
+  .box1 h1{
+      margin-left: 30px;
+      font-size: 80px;
+  }
+  .line{
+      margin-left: 30px;
+  }
+  .line hr{
+      width: 100px;
+      margin-top: 110px;       
+  }
+  .main-container-inner{
+     
+      margin: 0 auto;
+      justify-content: space-between;
+      width: 1200px;
+      display: flex;
+      margin-top: 50px;
+      background-color: rgb(32, 31, 31);
+      padding: 60px 20px;
+      margin-top: 220px;
+  }
+  .main-img{
+      width: 700px;
+      display: flex;
+      justify-content: space-between;
+  }
+   
+  i {
+     font-size: 50px;
+     color: rgb(219, 18, 18);
+  }
+  .text{
+      padding: 10px 0;
+      font-family: 'Work Sans', sans-serif;
+      font-size: 30px;
+      font-weight: bold;
+      text-transform: uppercase;
+  }
+  .row {
+      margin: 20px;    
+      }
+      
+  input:focus {
+      color: rgb(251, 251, 251);
+  }
+  
+  button{           
+  color: rgb(124, 63, 0);
+  padding: 3px 7px;
+  width: 250px;
+  background-color: red;
+  text-align: center;  
+  cursor: pointer;  
+  }
+  button:hover { 
+   background-color: rgb(53, 49, 49); 
+  } 
+  input {
+   width: 250px;
+   display: inline-block;
+   box-sizing: border-box;
+  } 
+
+/*<!-- End Section 6 (Contact Us) --> */
