--- a/style.css
+++ b/style.css
@@ -936,7 +936,7 @@ margin-left: 0px 0px 0px 30px;
     padding: 15px;
   }
   
-  .container{
+  .Footercontainer{
     height: 150px;
     margin-top: 10%;
   }
@@ -951,7 +951,7 @@ margin-left: 0px 0px 0px 30px;
     overflow: auto; /* Enable scroll if needed */
   }
   
-  Modal Content/Box
+  
   .modal-content {
     /* background-color: #0a0a0a; */
     margin: 15% auto; /* 15% from the top and centered */
