--- a/style.css
+++ b/style.css
@@ -989,7 +989,6 @@ margin-left: 0px 0px 0px 30px;
      
   }
   .box1{
-      border: 1px solid white; 
       max-width: 600px;
       display: flex;
       justify-content: space-between;
@@ -1015,6 +1014,8 @@ margin-left: 0px 0px 0px 30px;
       background-color: rgb(32, 31, 31);
       padding: 60px 20px;
       margin-top: 220px;
+     font-family: 'Quicksand', sans-serif;
+     text-align: center;
   }
   .main-img{
       width: 700px;
@@ -1022,7 +1023,7 @@ margin-left: 0px 0px 0px 30px;
       justify-content: space-between;
   }
    
-  i {
+.icons i {
      font-size: 50px;
      color: rgb(219, 18, 18);
   }
