--- a/style.css
+++ b/style.css
@@ -916,6 +916,7 @@ font-size: 20px;
            margin-top: -100px;
             margin-left: -100px;
             border-radius: 20px;
+            text-align: center;
 }
 .parent{
     
